# RainAlertTgBot

./: CMakeLists.txt  README.MD  README.md  main.cpp  run.sh  test.db
Boundary/: timeboundarymaker.h
Db/: dbhandler.cpp  dbhandler.h  dbmanager.cpp  dbmanager.hpp
Http/: requesthandler.cpp  requesthandler.hpp
Json/: jsonhandler.cpp  jsonhandler.hpp
Parser/: parser.cpp
Request/: requesthandler.cpp  requesthandler.h
Sheduler/: sheduler.cpp  sheduler.h  sheduler.hpp
